--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ActionRoguelike/Maps/TestLevel.TestLevel
+GameDefaultMap=/Game/ActionRoguelike/Maps/MainMenu_Entry.MainMenu_Entry
 EditorStartupMap=/Game/ActionRoguelike/Maps/TestLevel.TestLevel
+GlobalDefaultGameMode=/Game/ActionRoguelike/GameModeBP.GameModeBP_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
