--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -112,6 +112,7 @@ ManualIPAddress=
 +EditProfiles=(Name="BlockAllDynamic",CustomResponses=((Channel="Projectile")))
 +EditProfiles=(Name="BlockAll",CustomResponses=((Channel="Projectile")))
 +EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="Camera",Response=ECR_Ignore)))
++EditProfiles=(Name="PhysicsActor",CustomResponses=((Channel="Projectile")))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
