--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -117,3 +117,6 @@ PerPlatformBuildConfig=()
 PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
 
+[/Script/ActionRoguelike.SSaveGameSettings]
+DummyTablePath=/Game/ActionRoguelike/Monsters/DT_Monsters.DT_Monsters
+
