--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -108,7 +108,7 @@ ManualIPAddress=
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility"),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ")
 +Profiles=(Name="Projectile",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="Projectile",CustomResponses=((Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Overlap,bTraceType=False,bStaticObject=False,Name="Projectile")
-+EditProfiles=(Name="Pawn",CustomResponses=((Channel="Projectile",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)))
++EditProfiles=(Name="Pawn",CustomResponses=((Channel="Projectile",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Ignore)))
 +EditProfiles=(Name="BlockAllDynamic",CustomResponses=((Channel="Projectile")))
 +EditProfiles=(Name="BlockAll",CustomResponses=((Channel="Projectile")))
 +EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="Camera",Response=ECR_Ignore)))
